[package]
name = "todo-flows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
flowsnet-platform-sdk = "0.1.6"
log = "0.4.20"
mysql_async_wasi = { version = "0.31", features = [ "default-rustls" ] }
serde = "1.0.193"
serde_json = "1.0.108"
tokio_wasi = { version="1",features = ["full"]}
webhook-flows = "0.4.4"
